use overflow clip to prevent overflow while allowing sticky positioning

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -5,15 +5,13 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    accent-color: theme('colors.amber.300');
-  }
-
   html,
   body {
     max-width: 100%;
+    overflow-x: hidden;
+    overflow-x: clip;
+    scroll-behavior: smooth;
+    accent-color: theme('colors.amber.300');
   }
 
   body,
